move script to a different file

--- a/client/index.html
+++ b/client/index.html
@@ -9,32 +9,6 @@
   <body>
     <textarea id="code"></textarea>
     <p id="info"></p>
-    <script>
-      const codeTextArea = document.getElementById('code')
-      const info = document.getElementById('info')
-      code.focus()
-      const url = 'ws://localhost:8080'
-      const connection = new WebSocket(url)
-      connection.onopen = () => {
-        console.log('Connection open')
-      }
-      connection.onmessage = (message) => {
-        info.textContent = message.data 
-      }
-      connection.onerror = (error) => {
-        console.log(`Error: ${JSON.stringify(error, ['message', 'arguments'], 2)}`)
-      }
-
-      let typingIdleTimer
-      let DELAY = 1400
-
-      codeTextArea.addEventListener('keyup', (e) => {
-        if (typingIdleTimer) { clearTimeout(typingIdleTimer) }
-        typingIdleTimer = setTimeout(() => connection.send(codeTextArea.value), DELAY)
-      })
-      codeTextArea.addEventListener('keydown', () => {
-        if (typingIdleTimer) { clearTimeout(typingIdleTimer) }
-      })
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
