--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="main.css" type="text/css">
-    <title>collab</title>
+    <title>mobby.</title>
   </head>
   <body>
     <textarea id="code"></textarea>
