--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,27 @@
     <title>mobby.</title>
   </head>
   <body>
-    <textarea id="code"></textarea>
-    <p id="info"></p>
-    <script src="main.js"></script>
+    <div class="row">
+      <div class="box">
+        <p>HTML</p>
+        <textarea class="code"></textarea>
+      </div>
+      <div class="box">
+        <p>CSS</p>
+        <textarea class="code"></textarea>
+      </div>
+    </div>
+    <div class="row">
+      <div class="box">
+        <p>JS</p>
+        <p id="info"></p>
+        <textarea id="js" class="code"></textarea>
+      </div>
+      <div class="box">
+        <p>Output</p>
+        <iframe></iframe>
+      </div>
+    </div>
+    <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
