add logo and some styles

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,10 @@
     <title>mobby.</title>
   </head>
   <body>
+    <div class="logo">
+      <h1>mobby</h1>
+    </div>
+    <div class="main">
     <div class="row">
       <div class="box">
         <p>HTML</p>
@@ -27,6 +31,7 @@
         <p>Output</p>
         <iframe></iframe>
       </div>
+    </div>
     </div>
     <script src="main.js" type="text/javascript"></script>
   </body>
