style the code box heading

--- a/client/index.html
+++ b/client/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="row">
       <div class="box">
-        <p>JS</p>
-        <p id="info"></p>
+        <p>JavaScript</p>
+        <p class="info"></p>
         <textarea id="js" class="code"></textarea>
       </div>
       <div class="box">
