--- a/client/index.html
+++ b/client/index.html
@@ -14,11 +14,11 @@
     <div class="row">
       <div class="box">
         <p>HTML</p>
-        <textarea class="code"></textarea>
+        <textarea id="html" class="code"></textarea>
       </div>
       <div class="box">
         <p>CSS</p>
-        <textarea class="code"></textarea>
+        <textarea id="css" class="code"></textarea>
       </div>
     </div>
     <div class="row">
@@ -29,7 +29,7 @@
       </div>
       <div class="box">
         <p>Output</p>
-        <iframe></iframe>
+        <iframe id="output"></iframe>
       </div>
     </div>
     </div>
